--- a/index.html
+++ b/index.html
@@ -30,11 +30,15 @@
             </div>
             <!-- pallini -->
             <div class="dots">
-                <i class="fas fa-circle active"></i>
+                <i class="fas fa-circle" 
+                v-for="(image, index) in images"
+                :class="{active: index === imageIndex}"
+                ></i>
+                <!-- <i class="fas fa-circle active"></i>
                 <i class="fas fa-circle"></i>
                 <i class="fas fa-circle"></i>
                 <i class="fas fa-circle"></i>
-                <i class="fas fa-circle"></i>
+                <i class="fas fa-circle"></i> -->
             </div>
         </div>
     </div>
