--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
                 <i class="fas fa-circle" 
                 v-for="(image, index) in images"
                 :class="{active: index === imageIndex}"
+                @click="imageIndex = index"
                 ></i>
                 <!-- <i class="fas fa-circle active"></i>
                 <i class="fas fa-circle"></i>
